@@ -13,6 +13,9 @@ changes made.  See document footer for additional details.
 --- 202X-XX-XX  Release 7.36.0                                     ---
 ----------------------------------------------------------------------
 
+* Added a point-inside-object subcmd "inside" to analyze - Cliff Yapp 
+* Fixed analyze in/out test for multi-segment ray hits - Cliff Yapp
+* Fixed analyze cmd crash when specifying invalid objects - Cliff Yapp
 * Fixed search -attr behavior with names having spaces - Cliff Yapp
 * Updated OpenMesh library to version 9.0 - Cliff Yapp
 * Updated Open Asset Import Library - v5.2.5 + fix - Chris McGregor
